# Striide

./: frontend-deployment.yml  frontend-service.yml  package-lock.json  playbook.yml  striide-app.pem
database/: pythonscript.py
elk/logstash/: logstash.conf
striide-backend/: .gitignore  Cargo.toml  Dockerfile
striide-backend/api/: Cargo.toml
striide-backend/api/src/: .gitattributes  auth.rs  business.rs  feedback.rs  graph.json  lib.rs  onboarding.rs  pathfinder.rs  user_reports.rs
striide-backend/application/: Cargo.toml
striide-backend/application/src/: auth.rs  business.rs  lib.rs  onboarding.rs  upload_reports.rs  utils.rs
striide-backend/infrastructure/: Cargo.toml
striide-backend/infrastructure/src/: cors.rs  database.rs
striide-backend/models/: Cargo.toml
striide-backend/models/src/: lib.rs  onboarding.rs  session.rs  user.rs
striide-backend/shared/: Cargo.toml
striide-backend/shared/src/: lib.rs  response_models.rs  types.rs
striide-backend/src/: main.rs
striide-backend/src/scripts/scraping/: result.txt  scrape.json
striide-frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
striide-frontend/src/: auth.ts
striide-frontend/src/app/: globals.css  layout.tsx  page.tsx
striide-frontend/src/app/drafts/: page.tsx
striide-frontend/src/app/feedback/: page.tsx
striide-frontend/src/app/home/: layout.tsx  page.tsx
striide-frontend/src/app/map/: layout.tsx  page.tsx
striide-frontend/src/app/report/: layout.tsx  page.tsx
striide-frontend/src/app/user/: layout.tsx  page.tsx
striide-frontend/src/components/: Button.tsx  Checkbox.tsx  Geolocator.tsx  Input.tsx  Map.tsx  NotFoundIcon.tsx  Radio.tsx  Wrapper.tsx
striide-frontend/src/components/feedback/: Feedback.tsx
striide-frontend/src/components/landing/: LandingButton.tsx  LandingDropdown.tsx  LandingForm.tsx  LandingInput.tsx  LandingLink.tsx
striide-frontend/src/components/navbar/: DropDownOption.tsx  Navbar.tsx  NotificationsButton.tsx  SOSButton.tsx  SearchInput.tsx  SettingsButton.tsx  UpdatedNavbar.tsx
striide-frontend/src/components/reports/: Reports.tsx  ReportsForm.tsx
striide-frontend/src/components/root/: Logo.tsx  OnboardingForm.tsx  OnboardingStepFive.tsx  (+8 more)
striide-frontend/src/contexts/: AuthProvider.tsx  MapProvider.tsx
striide-frontend/src/lib/: constants.ts  types.ts  utils.ts
(+10 files in other folders)
