[package]
name = "striide-backend"
version = "0.1.0"
edition = "2018"

[dependencies]
# internal dependencies
api = { path = "./api" }
infrastructure = { path = "./infrastructure" }
# external dependencies
dotenv = "0.15.0"
serde_json = "1.0"

[dependencies.rocket]
version = "0.5.1"
features = ["json"]
