[package]
name = "api"
version = "0.1.0"
edition = "2018"

[dependencies]
# internal dependencies
application = { path = "../application" }
infrastructure = { path = "../infrastructure" }
models = { path = "../models" }
shared = { path = "../shared" }
# external dependencies
dotenv = "0.15.0"
serde_json = "1.0"
petgraph = "0.6.5"
geo = "0.28.0"
rstar = "0.12.0"
flate2 = "1.0.32"

[dependencies.reqwest]
version = "0.12"
features = ["json", "default-tls"]

[dependencies.rocket]
version = "0.5.1"
features = ["json"]

[dependencies.rocket_db_pools]
version = "0.2.0"
features = ["sqlx_postgres"]

[dependencies.chrono]
version = "0.4.38"
features = ["serde"]
