[package]
name = "application"
version = "0.1.0"
edition = "2018"

[dependencies]
# internal dependencies
models = { path = "../models" }
shared = { path = "../shared" }
# external dependencies
argon2 = "0.5.3"
chrono-tz = "0.9.0"


[dependencies.reqwest]
version = "0.12"
features = ["json", "default-tls"]

[dependencies.rocket]
version = "0.5.1"
features = ["json"]

[dependencies.rand]
version = "0.8.5"
features = ["std"]

[dependencies.rocket_db_pools]
version = "0.2.0"
features = ["sqlx_postgres"]

[dependencies.sqlx]
version = "0.7.0"
features = ["runtime-tokio", "tls-native-tls", "postgres", "chrono"]

[dependencies.chrono]
version = "0.4.38"
features = ["serde"]
