[package]
name = "models"
version = "0.1.0"
edition = "2018"

[dependencies]
# internal dependencies
infrastructure = { path = "../infrastructure" }
# external dependencies

[dependencies.rocket]
version = "0.5.1"
features = ["json"]

[dependencies.rocket_db_pools]
version = "0.2.0"
features = ["sqlx_postgres"]

[dependencies.sqlx]
version = "0.7.0"
features = ["runtime-tokio", "tls-native-tls", "postgres", "chrono"]

[dependencies.chrono]
version = "0.4.38"
features = ["serde"]
